feat: window의 자료구조를 deque에서 ArrayList로 변경